[metadata]
name = car-distance-estimation
url = https://github.com/serabiasin/Distance-Estimation
project_urls =
    Documentation = https://github.com/serabiasin/Distance-Estimation
    "Source Code" = https://github.com/serabiasin/Distance-Estimation

author = Ahmad Alfi Adz-Dzikri
author_email = ahmadalfiazdzikri@gmail.com
description = Yolo based for car distance estimation and localization
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords = tensorflow, yolo, AI, TPU
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development


[options]
package_dir =
    = py_src
packages = find:
zip_safe = False
setup_requires =
    numpy>=1.18.0
    easydict
install_requires =
    numpy>=1.18.0
    easydict

[options.packages.find]
where = py_src